Fix parallelisation bug in data loading and make onehot labels + some analysis code

--- a/Data/load_data.ipynb
+++ b/Data/load_data.ipynb
@@ -20,10 +20,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading Waveforms: 100%|██████████| 18886/18886 [14:43<00:00, 21.37it/s]  \n",
-      "Padding Waveforms: 100%|██████████| 18886/18886 [00:37<00:00, 501.74it/s]\n",
-      "Loading Labels: 100%|██████████| 18886/18886 [00:01<00:00, 14451.30it/s]\n",
-      "Padding Labels: 100%|██████████| 18886/18886 [00:00<00:00, 233601.67it/s]\n"
+      "Loading Waveforms: 100%|██████████| 18886/18886 [13:56<00:00, 22.59it/s]  \n",
+      "Padding Waveforms: 100%|██████████| 18886/18886 [03:27<00:00, 90.86it/s] \n",
+      "Loading Labels: 100%|██████████| 18886/18886 [00:01<00:00, 11795.09it/s]\n"
      ]
     }
    ],
@@ -41,16 +40,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading Waveforms: 100%|██████████| 20550/20550 [16:23<00:00, 20.88it/s]  \n",
-      "Padding Waveforms: 100%|██████████| 20550/20550 [00:38<00:00, 539.84it/s]\n",
-      "Loading Labels: 100%|██████████| 20550/20550 [00:01<00:00, 13918.62it/s]\n",
-      "Padding Labels: 100%|██████████| 20550/20550 [00:00<00:00, 227873.56it/s]\n"
+      "Loading Waveforms: 100%|██████████| 20550/20550 [15:24<00:00, 22.23it/s] \n",
+      "Padding Waveforms: 100%|██████████| 20550/20550 [04:11<00:00, 81.68it/s] \n",
+      "Loading Labels: 100%|██████████| 20550/20550 [00:02<00:00, 8186.85it/s]\n"
      ]
     }
    ],
    "source": [
     "save_16khz_audio('train')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab7ee8a7-4102-4714-ae82-0444ff33134c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
