--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -413,9 +413,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dl_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "dl_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -427,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
