Update final runs

--- a/RnnCnn.ipynb
+++ b/RnnCnn.ipynb
@@ -533,9 +533,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my_env",
+   "display_name": "dl_env",
    "language": "python",
-   "name": "my_env"
+   "name": "dl_env"
   },
   "language_info": {
    "codemirror_mode": {
